[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airt"
version = "0.1.0"
description = "AiRT core library"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.75.0",
    "diskcache>=5.6.3",
    "Jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "langgraph>=1.0.5",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0"
]

[tool.setuptools]
packages = ["airt"]
